--- a/src/components/book-a-demo/demo-sky-cta.module.css
+++ b/src/components/book-a-demo/demo-sky-cta.module.css
@@ -17,8 +17,8 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 /* demosky-grid-btm */
@@ -210,5 +210,24 @@
   }
   .navyBtn {
     min-width: 190px;
+  }
+}
+
+/* canonical site container: 1320 @1440, reduced gutters on tablet/mobile */
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
