--- a/src/components/book-a-demo/demo-steps.module.css
+++ b/src/components/book-a-demo/demo-steps.module.css
@@ -7,8 +7,6 @@
   background-color: transparent;
   padding-top: 60px;
   padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
   display: block;
   overflow: hidden;
   position: relative;
@@ -19,6 +17,8 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 /* Header block */
@@ -182,5 +182,24 @@
 
   .subtitle {
     font-size: 0.9375rem;
+  }
+}
+
+/* canonical site container: 1320 @1440, reduced gutters on tablet/mobile */
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
