--- a/src/components/book-a-demo/demo-why-boldteq.module.css
+++ b/src/components/book-a-demo/demo-why-boldteq.module.css
@@ -7,8 +7,6 @@
   background-image: linear-gradient(#019ae61a, #019ae600);
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-left: 5%;
-  padding-right: 5%;
   position: relative;
   overflow: hidden;
 }
@@ -18,6 +16,8 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .header {
@@ -186,5 +186,24 @@
 
   .card {
     padding: 24px 20px;
+  }
+}
+
+/* canonical site container: 1320 @1440, reduced gutters on tablet/mobile */
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1320px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+@media screen and (max-width: 479px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
